--- a/.env.example
+++ b/.env.example
@@ -31,3 +31,7 @@ TWITTER_CONSUMER_KEY =
 TWITTER_CONSUMER_SECRET =
 TWITTER_ACCESS_TOKEN =
 TWITTER_ACCESS_TOKEN_SECRET =
+
+MQTT_HOST=fishpi-mqtt
+MQTT_PORT=1883
+MQTT_CLIENT=SomeRandomString_ShouldBeUniq_LikePHPPublisher
