--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,19 +4,8 @@ services:
   mosquitto:
     image: eclipse-mosquitto
     container_name: fishpi-mqtt
+    restart: always
     ports:
       - '1883:1883'
       - '9001:9001'
-  app:
-    image: php:7.1-fpm
-    volumes:
-      - .:/code
-  subscriber:
-    image: python
-    volumes:
-      - .:/code
-    command:
-      - tail
-      - -f
-      - /dev/null
 
